Improve self-description on index

--- a/index.html
+++ b/index.html
@@ -12,23 +12,39 @@ layout: default
 
   <div class="col-sm-8">
     <p class="lead">
-      Hi, I'm Curtis. I am a 19-year-old software developer from Montréal,
-      Québec.
+      Hi, I'm Curtis.
+      I am a 19-year-old software developer
+      from Montréal, Québec.
     </p>
     <p>
-      I enjoy working on hobby
-      <a href="projects.html">projects</a> and contributing to open-source
-      software. All of my public work can be found on
-      <a href="https://github.com/programble">GitHub</a>. These days I'm mostly
-      working with Node.js or C on OS X.
+      I'm interested in building web APIs
+      and working with relational databases,
+      as well as creating tools
+      for developers.
     </p>
     <p>
-      My main interest after software development is music. I collect
-      <a href="http://records.cmcenroe.me">records</a>, mainly consisting of
-      post-rock, such as <em>Godspeed You! Black Emperor</em> and <em>Thee
-      Silver Mt. Zion Memorial Orchestra</em>. Other artists in my collection
-      include <em>Swans</em>, <em>mewithoutYou</em> and <em>Neutral Milk
-      Hotel</em>.
+      I enjoy working on
+      hobby <a href="projects.html">projects</a>
+      and contributing to open-source software.
+      All of my personal work
+      can be found on <a href="https://github.com/programble">GitHub</a>.
+      These days I'm mostly working with
+      Node.js or C
+      on OS X or Arch Linux.
+    </p>
+    <p>
+      My main interest
+      after software development
+      is (listening to) music.
+      I collect <a href="http://records.cmcenroe.me">records</a>,
+      mainly consisting of local post-rock,
+      such as
+      <em>Godspeed You! Black Emperor</em>
+      and <em>Thee Silver Mt. Zion Memorial Orchestra</em>.
+      Some of my other favourite artists include
+      <em>Swans</em>,
+      <em>mewithoutYou</em>
+      and <em>Neutral Milk Hotel</em>.
     </p>
 
     <hr>
