Fix close li tag on job doings

--- a/resume.html
+++ b/resume.html
@@ -35,7 +35,7 @@ title: Résumé
   <p>{{ job.stack | join:', ' }}</p>
   <ul>
     {% for doing in job.doings %}
-      <li>{{ doing }}</lii>
+      <li>{{ doing }}</li>
     {% endfor %}
   </ul>
 {% endfor %}
