Fit resume back onto one page

--- a/resume.html
+++ b/resume.html
@@ -3,13 +3,15 @@ layout: default
 title: Résumé
 ---
 
-<a class="float-right hidden-print" href="resume.pdf" target="_blank">
-  <i class="fa fa-download"></i> PDF
-</a>
+<div class="pdf-link float-right hidden-print">
+  <a href="resume.pdf" target="_blank">
+    <i class="fa fa-download"></i> PDF
+  </a>
+</div>
 
 <h2 class="visible-print">Curtis McEnroe</h2>
 
-<ul class="list-unstyled visible-print">
+<ul class="subtitle list-unstyled visible-print">
   <li>{{ site.domain }}</li>
   <li>{{ site.email }}</li>
   <li>github.com/programble</li>
