--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,13 @@ projects:
 
   - name: Libraries
     items:
+      - name: Inth OAuth2
+        repo: programble/inth-oauth2
+        tech: [Rust]
+        year: 2015
+        icon: fa-users
+        desc: OAuth 2.0 client
+
       - name: Errio
         repo: programble/errio
         tech: [Node.js]
