Rewrite projects page

--- a/projects.html
+++ b/projects.html
@@ -2,186 +2,123 @@
 title: Projects
 
 projects:
-  - name: Web
-    items:
-      - name: Writ
-        repo: programble/writ
-        tech: [CSS]
-        year: 2015
-        icon: fa-align-left
-        desc: Opinionated, classless styles for semantic HTML
+  current:
+    - name: Ego Tree
+      repo: programble/ego-tree
+      tech: [Rust]
+      year: 2016
+      icon: fa-tree
+      desc: Vec-backed mutable tree
 
-      - name: Discohands
-        repo: busbud/discohands
-        tech: [Node.js, MongoDB]
-        year: 2014
-        icon: fa-comments
-        desc: Democratically choose topics to discuss
+    - name: Inth OAuth2
+      repo: programble/inth-oauth2
+      tech: [Rust]
+      year: 2016
+      icon: fa-users
+      desc: OAuth 2.0 client
 
-      - name: Refheap
-        repo: Raynes/refheap
-        tech: [Clojure, MongoDB]
-        year: 2013–2014
-        icon: fa-paste
-        desc: '“The Reference Heap” pastebin'
+    - name: Writ
+      repo: programble/writ
+      tech: [CSS]
+      year: 2015
+      icon: fa-align-left
+      desc: Opinionated, classless styles for semantic HTML
 
-  - name: Libraries
-    items:
-      - name: Inth OAuth2
-        repo: programble/inth-oauth2
-        tech: [Rust]
-        year: 2015
-        icon: fa-users
-        desc: OAuth 2.0 client
+    - name: Tetrasm
+      repo: programble/tetrasm
+      tech: [NASM]
+      year: 2015
+      icon: fa-gamepad
+      desc: Tetris for x86
 
-      - name: Errio
-        repo: programble/errio
-        tech: [Node.js]
-        year: 2015
-        icon: fa-exchange
-        desc: Error serialization and deserialization
+    - name: Pult
+      repo: programble/pult
+      tech: [Node.js]
+      year: 2014
+      icon: fa-terminal
+      desc: Access local servers on .dev domains
 
-      - name: SuperError
-        repo: busbud/super-error
-        tech: [JavaScript]
-        year: 2014
-        icon: fa-exclamation-triangle
-        desc: Easily subclass errors
+  past:
+    - name: Errio
+      repo: programble/errio
+      tech: [Node.js]
+      year: 2015
+      icon: fa-exchange
+      desc: Error serialization and deserialization
 
-      - name: Configru
-        repo: programble/configru
-        tech: [Ruby]
-        year: 2011–2013
-        icon: fa-cogs
-        desc: YAML configuration library
+    - name: Careen
+      repo: programble/careen
+      tech: [TypeScript]
+      year: 2015
+      icon: fa-database
+      desc: SQL schema migration manager
 
-      - name: Hemp
-        repo: programble/hemp
-        tech: [JavaScript]
-        year: 2015
-        icon: fa-pencil
-        desc: Simple JavaScript string builder
+    - name: Gury
+      repo: programble/gury
+      tech: [Node.js]
+      year: 2015
+      icon: fa-picture-o
+      desc: Upload anything to imgur
 
-  - name: Development
-    items:
-      - name: Careen
-        repo: programble/careen
-        tech: [TypeScript]
-        year: 2015
-        icon: fa-database
-        desc: SQL schema migration manager
+    - name: Discohands
+      repo: busbud/discohands
+      tech: [Node.js, MongoDB]
+      year: 2014
+      icon: fa-comments
+      desc: Democratically choose topics to discuss
 
-      - name: Pult
-        repo: programble/pult
-        tech: [Node.js]
-        year: 2014
-        icon: fa-terminal
-        desc: Access local servers on .dev domains
+    - name: SuperError
+      repo: busbud/super-error
+      tech: [JavaScript]
+      year: 2014
+      icon: fa-exclamation-triangle
+      desc: Easily subclass errors
 
-      - name: Apricot
-        repo: apricot-lang/apricot
-        tech: [Ruby]
-        year: 2012–2013
-        icon: fa-code
-        desc: Clojure-like Lisp on Rubinius
-
-      - name: TypeNode
-        repo: programble/typenode
-        tech: [TypeScript]
-        year: 2015
-        icon: fa-tags
-        desc: TypeScript declarations for Node.js
-
-  - name: Games
-    items:
-      - name: Tetrasm
-        repo: programble/tetrasm
-        tech: [NASM]
-        year: 2015
-        icon: fa-gamepad
-        desc: Tetris for x86 in NASM
-
-      - name: Bare Metal Tetris
-        repo: programble/bare-metal-tetris
-        tech: [C]
-        year: 2014
-        icon: fa-gamepad
-        desc: Tetris for x86
-
-      - name: Letterwang
-        repo: programble/letterwang
-        tech: [Node.js, Socket.IO]
-        year: 2013
-        icon: fa-font
-        desc: Multiplayer word-spelling game
-
-  - name: Experiments
-    items:
-      - name: Gury
-        repo: programble/gury
-        tech: [Node.js]
-        year: 2015
-        icon: fa-picture-o
-        desc: Upload anything to imgur
-
-      - name: Caps
-        repo: programble/caps
-        tech: [Node.js]
-        year: 2014
-        icon: fa-cloud-upload
-        desc: Store any file on anonymous public services
-
-      - name: Forklimit
-        repo: programble/forklimit
-        tech: [C]
-        year: 2013
-        icon: fa-bomb
-        desc: Prevent fork-bombs
-
-      - name: Keyloog
-        repo: programble/keyloog
-        tech: [C]
-        year: 2011
-        icon: fa-keyboard-o
-        desc: Keylogger for X
-
-  - name: Configuration
-    items:
-      - name: Effuse
-        repo: programble/effuse
-        tech: [Ruby]
-        year: 2012–2013
-        icon: fa-file-text
-        desc: Tool for symlinking dotfiles
-
-      - name: Dotfiles
-        repo: programble/dotfiles
-        icon: fa-cog
-        desc: Configuration files for VIM, zsh, etc.
+    - name: Apricot
+      repo: apricot-lang/apricot
+      tech: [Ruby]
+      year: 2012–2013
+      icon: fa-code
+      desc: Clojure-like Lisp on Rubinius
 ---
 
-<h2 class="text-center">Projects</h2>
+<h2>Current Projects</h2>
 
-{% for category in page.projects %}
-  <h3>{{ category.name }}</h3>
+<div class="flex flex-wrap">
+  {% for project in page.projects.current %}
+    <div class="project">
+      <h4>
+        <small><i class="fa {{ project.icon }}"></i></small>
+        <a href="https://github.com/{{ project.repo }}">{{ project.name }}</a>
+      </h4>
+      <p class="subtitle">
+        <small>{{ project.tech | join:', ' }}</small>
+      </p>
+      <p class="subtitle">{{ project.desc }}</p>
+    </div>
+  {% endfor %}
+</div>
 
-  <div class="flex flex-wrap">
-    {% for project in category.items %}
-      <div class="project">
-        <h4>
-          <small><i class="fa {{ project.icon }}"></i></small>
-          <a href="https://github.com/{{ project.repo }}">{{ project.name }}</a>
-        </h4>
-        <p class="subtitle">
-          <small>
-            {% if project.tech %}
-              {{ project.tech | join:', ' }},
-            {% endif %}
-            {{ project.year }}
-          </small>
-        </p>
-        <p class="subtitle">{{ project.desc }}</p>
-      </div>
-    {% endfor %}
-  </div>
-{% endfor %}
+<h2>Past Projects</h2>
+
+<div class="flex flex-wrap">
+  {% for project in page.projects.past %}
+    <div class="project">
+      <h4>
+        <small><i class="fa {{ project.icon }}"></i></small>
+        <a href="https://github.com/{{ project.repo }}">{{ project.name }}</a>
+      </h4>
+      <p class="subtitle">
+        <small>
+          {{ project.tech | join:', ' }},
+          {{ project.year }}
+        </small>
+      </p>
+      <p class="subtitle">{{ project.desc }}</p>
+    </div>
+  {% endfor %}
+</div>
+
+<p>
+  …and <a href="https://github.com/programble?tab=repositories">many more</a>…
+</p>
