Add CST2COMP, CSTMF01, CSTMF02 to records

--- a/records.html
+++ b/records.html
@@ -55,6 +55,10 @@ records:
     img: clipping-c.jpg
     href: http://www.discogs.com/release/5762314
 
+  - title: Constellation — Song of the Silent Land
+    img: constellation-sotsl.jpg
+    href: https://www.discogs.com/release/361866
+
   - title: Crystal Castles — Doe Deer
     img: crystal-castles-dd.jpg
     href: http://www.discogs.com/release/2249093
@@ -94,6 +98,22 @@ records:
   - title: Godspeed You! Black Emperor — ‘Asunder, Sweet and Other Distress’
     img: godspeed-you-black-emperor-asaod.jpg
     href: http://www.discogs.com/release/6802242
+
+  - title: Hangedup & Tony Conrad — Transit of Venus
+    img: hangedup-tony-conrad-tov.jpg
+    href: https://www.discogs.com/release/3690845
+
+  - title: Kanada 70 — Vamp Ire
+    img: kanada-70-vi.jpg
+    href: https://www.discogs.com/release/3690845
+
+  - title: Khôra — Silent Your Body is Endless
+    img: khora-sybie.jpg
+    href: https://www.discogs.com/release/2536219
+
+  - title: Les Momies de Palerme — Brûlez ce Coeur
+    img: les-momies-de-palerme-bcc.jpg
+    href: https://www.discogs.com/release/2536219
 
   - title: mewithoutYou — Brother, Sister
     img: mewithoutyou-bs.jpg
@@ -143,6 +163,10 @@ records:
     img: neutral-milk-hotel-fwof.jpg
     href: http://www.discogs.com/release/3286242
 
+  - title: Nick Kuepfer — Avestruz
+    img: nick-kuepfer-a.jpg
+    href: https://www.discogs.com/release/2536219
+
   - title: Ought — More Than Any Other Day
     img: ought-mtaod.jpg
     href: http://www.discogs.com/release/5634288
@@ -154,6 +178,10 @@ records:
   - title: Ought — Sun Coming Down
     img: ought-scd.jpg
     href: http://www.discogs.com/release/7491987
+
+  - title: Pacha — Affaires Étrangères
+    img: pacha-ae.jpg
+    href: https://www.discogs.com/release/3690845
 
   - title: Pink Floyd — The Wall
     img: pink-floyd-tw.jpg
