Add Scraper to projects

--- a/projects.html
+++ b/projects.html
@@ -3,19 +3,26 @@ title: Projects
 
 projects:
   current:
-    - name: Ego Tree
-      repo: programble/ego-tree
-      tech: [Rust]
-      year: 2016
-      icon: fa-tree
-      desc: Vec-backed mutable tree
-
     - name: Inth OAuth2
       repo: programble/inth-oauth2
       tech: [Rust]
       year: 2016
       icon: fa-users
       desc: OAuth 2.0 client
+
+    - name: Scraper
+      repo: programble/scraper
+      tech: [Rust]
+      year: 2016
+      icon: fa-filter
+      desc: HTML parsing and querying with CSS selectors
+
+    - name: Ego Tree
+      repo: programble/ego-tree
+      tech: [Rust]
+      year: 2016
+      icon: fa-tree
+      desc: Vec-backed mutable tree
 
     - name: Writ
       repo: programble/writ
