--- a/records.html
+++ b/records.html
@@ -63,6 +63,10 @@ records:
     img: crystal-castles-dd.jpg
     href: http://www.discogs.com/release/2249093
 
+  - title: Deafheaven — Sunbather
+    img: deafheaven-s.jpg
+    href: http://www.discogs.com/release/4755491
+
   - title: Deafheaven — New Bermuda
     img: deafheaven-nb.jpg
     href: http://www.discogs.com/release/7424058
