Add Blackstar, TPTB, LP1, Platform

--- a/records.html
+++ b/records.html
@@ -47,6 +47,10 @@ records:
     img: beatles-tb.jpg
     href: http://www.discogs.com/release/1436445
 
+  - title: David Bowie — Blackstar
+    img: david-bowie-b.jpg
+    href: https://www.discogs.com/release/8110650
+
   - title: The Chariot — Long Live
     img: chariot-ll.jpg
     href: http://www.discogs.com/release/3488630
@@ -71,6 +75,10 @@ records:
     img: deafheaven-nb.jpg
     href: http://www.discogs.com/release/7424058
 
+  - title: Death Grips — The Powers That B
+    img: death-grips-tptb.jpg
+    href: https://www.discogs.com/release/6817240
+
   - title: La Dispute — Wildlife
     img: dispute-w.jpg
     href: http://www.discogs.com/release/3832730
@@ -78,6 +86,10 @@ records:
   - title: Do Make Say Think — You, You're a History in Rust
     img: do-make-say-think-yyahir.jpg
     href: http://www.discogs.com/release/919297
+
+  - title: FKA Twigs — LP1
+    img: fka-twigs-lp1.jpg
+    href: https://www.discogs.com/release/5964177
 
   - title: Godspeed You! Black Emperor — F♯ A♯ ∞
     img: godspeed-you-black-emperor-fa.jpg
@@ -106,6 +118,10 @@ records:
   - title: Hangedup & Tony Conrad — Transit of Venus
     img: hangedup-tony-conrad-tov.jpg
     href: https://www.discogs.com/release/3690845
+
+  - title: Holly Herndon — Platform
+    img: holly-herndon-p.jpg
+    href: https://www.discogs.com/release/7015065
 
   - title: Kanada 70 — Vamp Ire
     img: kanada-70-vi.jpg
