Add SAD and TGM

--- a/records.html
+++ b/records.html
@@ -291,6 +291,10 @@ records:
     img: swans-lol.jpg
     href: http://www.discogs.com/release/7850529
 
+  - title: Swans — Swans Are Dead
+    img: swans-sad.jpg
+    href: http://www.discogs.com/release/1347004
+
   - title: Swans — My Father Will Guide Me Up a Rope to the Sky
     img: swans-mfwgmuartts.jpg
     href: http://www.discogs.com/release/2461349
@@ -306,6 +310,10 @@ records:
   - title: Swans — The Gate
     img: swans-tg.jpg
     href: http://www.discogs.com/release/7559389
+
+  - title: Swans — The Glowing Man
+    img: swans-tgm.jpg
+    href: http://www.discogs.com/release/8647542
 ---
 
 <hr>
