Add Soundtracks for the Blind

--- a/records.html
+++ b/records.html
@@ -291,6 +291,10 @@ records:
     img: swans-lol.jpg
     href: http://www.discogs.com/release/7850529
 
+  - title: Swans — Soundtracks for the Blind
+    img: swans-sftb.jpg
+    href: https://www.discogs.com/release/5563055
+
   - title: Swans — Swans Are Dead
     img: swans-sad.jpg
     href: http://www.discogs.com/release/1347004
