Add FreeBSD to resume

--- a/resume.html
+++ b/resume.html
@@ -35,9 +35,10 @@ resume:
 
     - name: Systems
       items:
-        - OS X
+        - FreeBSD
         - Ubuntu
         - Arch Linux
+        - OS X
 
   work:
     - title: Software Developer
