Add Plays the Music of Twin Peaks

--- a/records.html
+++ b/records.html
@@ -318,6 +318,10 @@ records:
   - title: Swans — The Glowing Man
     img: swans-tgm.jpg
     href: http://www.discogs.com/release/8647542
+
+  - title: Xiu Xiu — Plays the Music of Twin Peaks
+    img: xiu-xiu-ptmotp.jpg
+    href: https://www.discogs.com/release/8884007
 ---
 
 <hr>
