--- a/records.html
+++ b/records.html
@@ -135,6 +135,10 @@ records:
     img: les-momies-de-palerme-bcc.jpg
     href: https://www.discogs.com/release/2536219
 
+  - title: mewithoutYou — [A→B] Life
+    img: mewithoutyou-abl.jpg
+    href: https://www.discogs.com/release/2488410
+
   - title: mewithoutYou — Brother, Sister
     img: mewithoutyou-bs.jpg
     href: http://www.discogs.com/release/4291641
