Add Light Falls

--- a/records.html
+++ b/records.html
@@ -323,6 +323,10 @@ records:
     img: swans-tgm.jpg
     href: http://www.discogs.com/release/8647542
 
+  - title: Wrekmeister Harmonies — Light Falls
+    img: wrekmeister-harmonies-lf.jpg
+    href: https://www.discogs.com/release/9054147
+
   - title: Xiu Xiu — Plays the Music of Twin Peaks
     img: xiu-xiu-ptmotp.jpg
     href: https://www.discogs.com/release/8884007
