--- a/records.html
+++ b/records.html
@@ -5,47 +5,47 @@ title: Records
 records:
   - title: Andrew Jackson Jihad — People That Can Eat People Are the Luckiest People in the World
     img: andrew-jackson-jihad-ptcepatlpitw.jpg
-    href: http://www.discogs.com/release/5125050
+    href: https://www.discogs.com/release/5125050
 
   - title: The Angels of Light — Sing “Other People”
     img: angels-of-light-sop.jpg
-    href: http://www.discogs.com/release/1528700
+    href: https://www.discogs.com/release/1528700
 
   - title: The Angels of Light — We Are Him
     img: angels-of-light-wah.jpg
-    href: http://www.discogs.com/release/1094366
+    href: https://www.discogs.com/release/1094366
 
   - title: Animal Collective — Strawberry Jam
     img: animal-collective-sj.jpg
-    href: http://www.discogs.com/release/1081394
+    href: https://www.discogs.com/release/1081394
 
   - title: The Antlers — In the Attic of the Universe
     img: antlers-itaotu.jpg
-    href: http://www.discogs.com/release/4163806
+    href: https://www.discogs.com/release/4163806
 
   - title: The Antlers — Hospice
     img: antlers-h.jpg
-    href: http://www.discogs.com/release/1927451
+    href: https://www.discogs.com/release/1927451
 
   - title: Arcade Fire — Arcade Fire
     img: arcade-fire-af.jpg
-    href: http://www.discogs.com/release/415633
+    href: https://www.discogs.com/release/415633
 
   - title: Arcade Fire — Funeral
     img: arcade-fire-f.jpg
-    href: http://www.discogs.com/release/2093841
+    href: https://www.discogs.com/release/2093841
 
   - title: Arcade Fire — Neon Bible
     img: arcade-fire-nb.jpg
-    href: http://www.discogs.com/release/968765
+    href: https://www.discogs.com/release/968765
 
   - title: Arcade Fire — The Suburbs
     img: arcade-fire-ts.jpg
-    href: http://www.discogs.com/release/2380004
+    href: https://www.discogs.com/release/2380004
 
   - title: The Beatles — The Beatles
     img: beatles-tb.jpg
-    href: http://www.discogs.com/release/1436445
+    href: https://www.discogs.com/release/1436445
 
   - title: David Bowie — Blackstar
     img: david-bowie-b.jpg
@@ -53,11 +53,11 @@ records:
 
   - title: The Chariot — Long Live
     img: chariot-ll.jpg
-    href: http://www.discogs.com/release/3488630
+    href: https://www.discogs.com/release/3488630
 
   - title: clipping. — CLPPNG
     img: clipping-c.jpg
-    href: http://www.discogs.com/release/5762314
+    href: https://www.discogs.com/release/5762314
 
   - title: Constellation — Song of the Silent Land
     img: constellation-sotsl.jpg
@@ -65,15 +65,15 @@ records:
 
   - title: Crystal Castles — Doe Deer
     img: crystal-castles-dd.jpg
-    href: http://www.discogs.com/release/2249093
+    href: https://www.discogs.com/release/2249093
 
   - title: Deafheaven — Sunbather
     img: deafheaven-s.jpg
-    href: http://www.discogs.com/release/4755491
+    href: https://www.discogs.com/release/4755491
 
   - title: Deafheaven — New Bermuda
     img: deafheaven-nb.jpg
-    href: http://www.discogs.com/release/7424058
+    href: https://www.discogs.com/release/7424058
 
   - title: Death Grips — The Powers That B
     img: death-grips-tptb.jpg
@@ -81,11 +81,11 @@ records:
 
   - title: La Dispute — Wildlife
     img: dispute-w.jpg
-    href: http://www.discogs.com/release/3832730
+    href: https://www.discogs.com/release/3832730
 
   - title: Do Make Say Think — You, You're a History in Rust
     img: do-make-say-think-yyahir.jpg
-    href: http://www.discogs.com/release/919297
+    href: https://www.discogs.com/release/919297
 
   - title: FKA Twigs — LP1
     img: fka-twigs-lp1.jpg
@@ -93,27 +93,27 @@ records:
 
   - title: Godspeed You! Black Emperor — F♯ A♯ ∞
     img: godspeed-you-black-emperor-fa.jpg
-    href: http://www.discogs.com/release/4031284
+    href: https://www.discogs.com/release/4031284
 
   - title: Godspeed You! Black Emperor — Slow Riot for New Zerø Kanada
     img: godspeed-you-black-emperor-srfnzk.jpg
-    href: http://www.discogs.com/release/5846005
+    href: https://www.discogs.com/release/5846005
 
   - title: Godspeed You! Black Emperor — Lift Your Skinny Fists Like Antennas to Heaven
     img: godspeed-you-black-emperor-lysflath.jpg
-    href: http://www.discogs.com/release/74260
+    href: https://www.discogs.com/release/74260
 
   - title: Godspeed You! Black Emperor — Yanqui U.X.O.
     img: godspeed-you-black-emperor-yuxo.jpg
-    href: http://www.discogs.com/release/113676
+    href: https://www.discogs.com/release/113676
 
   - title: Godspeed You! Black Emperor — 'Allelujah! Don't Bend! Ascend!
     img: godspeed-you-black-emperor-adba.jpg
-    href: http://www.discogs.com/release/3917263
+    href: https://www.discogs.com/release/3917263
 
   - title: Godspeed You! Black Emperor — ‘Asunder, Sweet and Other Distress’
     img: godspeed-you-black-emperor-asaod.jpg
-    href: http://www.discogs.com/release/6802242
+    href: https://www.discogs.com/release/6802242
 
   - title: Hangedup & Tony Conrad — Transit of Venus
     img: hangedup-tony-conrad-tov.jpg
@@ -141,51 +141,51 @@ records:
 
   - title: mewithoutYou — Brother, Sister
     img: mewithoutyou-bs.jpg
-    href: http://www.discogs.com/release/4291641
+    href: https://www.discogs.com/release/4291641
 
   - title: mewithoutYou — It's All Crazy! It's All False! It's All a Dream! It's Alright
     img: mewithoutyou-iaciafiaadia.jpg
-    href: http://www.discogs.com/release/2366104
+    href: https://www.discogs.com/release/2366104
 
   - title: mewithoutYou — Ten Stories
     img: mewithoutyou-ts.jpg
-    href: http://www.discogs.com/release/3668813
+    href: https://www.discogs.com/release/3668813
 
   - title: mewithoutYou — Pale Horses
     img: mewithoutyou-ph.jpg
-    href: http://www.discogs.com/release/7191198
+    href: https://www.discogs.com/release/7191198
 
   - title: Molasses — You'll Never Be Well No More
     img: molasses-ynbwnm.jpg
-    href: http://www.discogs.com/release/1125086
+    href: https://www.discogs.com/release/1125086
 
   - title: "Molasses — Trilogie: Toil & Peaceful Life"
     img: molasses-ttapl.jpg
-    href: http://www.discogs.com/release/906661
+    href: https://www.discogs.com/release/906661
 
   - title: Molasses — A Slow Messe
     img: molasses-asm.jpg
-    href: http://www.discogs.com/release/1107490
+    href: https://www.discogs.com/release/1107490
 
   - title: Molasses — Trouble at Jinx Hotel
     img: molasses-tajh.jpg
-    href: http://www.discogs.com/release/892748
+    href: https://www.discogs.com/release/892748
 
   - title: Neutral Milk Hotel — Everything Is
     img: neutral-milk-hotel-ei.jpg
-    href: http://www.discogs.com/release/3286242
+    href: https://www.discogs.com/release/3286242
 
   - title: Neutral Milk Hotel — On Avery Island
     img: neutral-milk-hotel-oai.jpg
-    href: http://www.discogs.com/release/3286242
+    href: https://www.discogs.com/release/3286242
 
   - title: Neutral Milk Hotel — In the Aeroplane Over the Sea
     img: neutral-milk-hotel-itaots.jpg
-    href: http://www.discogs.com/release/3286242
+    href: https://www.discogs.com/release/3286242
 
   - title: Neutral Milk Hotel — Ferris Wheel on Fire
     img: neutral-milk-hotel-fwof.jpg
-    href: http://www.discogs.com/release/3286242
+    href: https://www.discogs.com/release/3286242
 
   - title: Nick Kuepfer — Avestruz
     img: nick-kuepfer-a.jpg
@@ -193,15 +193,15 @@ records:
 
   - title: Ought — More Than Any Other Day
     img: ought-mtaod.jpg
-    href: http://www.discogs.com/release/5634288
+    href: https://www.discogs.com/release/5634288
 
   - title: Ought — Once More With Feeling
     img: ought-omwf.jpg
-    href: http://www.discogs.com/release/6212717
+    href: https://www.discogs.com/release/6212717
 
   - title: Ought — Sun Coming Down
     img: ought-scd.jpg
-    href: http://www.discogs.com/release/7491987
+    href: https://www.discogs.com/release/7491987
 
   - title: Pacha — Affaires Étrangères
     img: pacha-ae.jpg
@@ -209,91 +209,91 @@ records:
 
   - title: Pink Floyd — The Wall
     img: pink-floyd-tw.jpg
-    href: http://www.discogs.com/release/526569
+    href: https://www.discogs.com/release/526569
 
   - title: Set Fire to Flames — Sings Reign Rebuilder
     img: set-fire-to-flames-srr.jpg
-    href: http://www.discogs.com/release/1288130
+    href: https://www.discogs.com/release/1288130
 
   - title: Set Fire to Flames — Telegraphs in Negative / Mouths Trapped in Static
     img: set-fire-to-flames-tinmtis.jpg
-    href: http://www.discogs.com/release/1288144
+    href: https://www.discogs.com/release/1288144
 
   - title: Sigur Rós — Kveikur
     img: sigur-ros-k.jpg
-    href: http://www.discogs.com/release/4660919
+    href: https://www.discogs.com/release/4660919
 
   - title: A Silver Mt. Zion — He Has Left Us Alone But Shafts of Light Sometimes Grace the Corner of Our Rooms
     img: silver-mt-zion-hhluabsolsgtcoor.jpg
-    href: http://www.discogs.com/release/84926
+    href: https://www.discogs.com/release/84926
 
   - title: Thee Silver Mt. Zion Memorial Orchestra & Tra-la-la Band — Born Into Trouble as the Sparks Fly Upward
     img: silver-mt-zion-bitatsfu.jpg
-    href: http://www.discogs.com/release/3926001
+    href: https://www.discogs.com/release/3926001
 
   - title: Thee Silver Mt. Zion Memorial Orchestra & Tra-la-la Band with Choir — “This is Our Punk Rock,” Thee Rusted Satellites Gather + Sing,
     img: silver-mt-zion-tioprtrsgas.jpg
-    href: http://www.discogs.com/release/467646
+    href: https://www.discogs.com/release/467646
 
   - title: Thee Silver Mountain Reveries — The “Pretty Little Lightning Paw” E.P.
     img: silver-mt-zion-pllp.jpg
-    href: http://www.discogs.com/release/467655
+    href: https://www.discogs.com/release/467655
 
   - title: Thee Silver Mt. Zion Memorial Orchestra & Tra-la-la Band — Horses in the Sky
     img: silver-mt-zion-hits.jpg
-    href: http://www.discogs.com/release/467776
+    href: https://www.discogs.com/release/467776
 
   - title: Thee Silver Mt. Zion Memorial Orchestra & Tra-la-la Band — 13 Blues for Thirteen Moons
     img: silver-mt-zion-13bftm.jpg
-    href: http://www.discogs.com/release/1269478
+    href: https://www.discogs.com/release/1269478
 
   - title: Thee Silver Mt. Zion Memorial Orchestra — Kollaps Tradixionales
     img: silver-mt-zion-kt.jpg
-    href: http://www.discogs.com/release/5395951
+    href: https://www.discogs.com/release/5395951
 
   - title: Thee Silver Mt. Zion Memorial Orchestra — “The West Will Rise Again”
     img: silver-mt-zion-twwra.jpg
-    href: http://www.discogs.com/release/3372770
+    href: https://www.discogs.com/release/3372770
 
   - title: Thee Silver Mt. Zion Memorial Orchestra — Fuck Off Get Free We Pour Light on Everything
     img: silver-mt-zion-fogfwploe.jpg
-    href: http://www.discogs.com/release/5283950
+    href: https://www.discogs.com/release/5283950
 
   - title: Thee Silver Mt. Zion Memorial Orchestra — Hang on to Each Other
     img: silver-mt-zion-hoteo.jpg
-    href: http://www.discogs.com/release/5579611
+    href: https://www.discogs.com/release/5579611
 
   - title: Slint — Tweez
     img: slint-t.jpg
-    href: http://www.discogs.com/release/479079
+    href: https://www.discogs.com/release/479079
 
   - title: Slint — Spiderland
     img: slint-s.jpg
-    href: http://www.discogs.com/release/2908745
+    href: https://www.discogs.com/release/2908745
 
   - title: Slint —
     img: slint-u.jpg
-    href: http://www.discogs.com/release/4678006
+    href: https://www.discogs.com/release/4678006
 
   - title: Colin Stetson & Sarah Neufeld — Never Were the Way She Was
     img: stetson-colin-neufeld-sarah-nwtwsw.jpg
-    href: http://www.discogs.com/release/6887839
+    href: https://www.discogs.com/release/6887839
 
   - title: Swans — Swans
     img: swans-s.jpg
-    href: http://www.discogs.com/release/6902777
+    href: https://www.discogs.com/release/6902777
 
   - title: Swans — Filth
     img: swans-f.jpg
-    href: http://www.discogs.com/release/6307172
+    href: https://www.discogs.com/release/6307172
 
   - title: Swans — White Light From the Mouth of Infinity
     img: swans-wlftmoi.jpg
-    href: http://www.discogs.com/release/7850529
+    href: https://www.discogs.com/release/7850529
 
   - title: Swans — Love of Life
     img: swans-lol.jpg
-    href: http://www.discogs.com/release/7850529
+    href: https://www.discogs.com/release/7850529
 
   - title: Swans — Soundtracks for the Blind
     img: swans-sftb.jpg
@@ -301,27 +301,27 @@ records:
 
   - title: Swans — Swans Are Dead
     img: swans-sad.jpg
-    href: http://www.discogs.com/release/1347004
+    href: https://www.discogs.com/release/1347004
 
   - title: Swans — My Father Will Guide Me Up a Rope to the Sky
     img: swans-mfwgmuartts.jpg
-    href: http://www.discogs.com/release/2461349
+    href: https://www.discogs.com/release/2461349
 
   - title: Swans — The Seer
     img: swans-ts.jpg
-    href: http://www.discogs.com/release/3832321
+    href: https://www.discogs.com/release/3832321
 
   - title: Swans — To Be Kind
     img: swans-tbk.jpg
-    href: http://www.discogs.com/release/5690090
+    href: https://www.discogs.com/release/5690090
 
   - title: Swans — The Gate
     img: swans-tg.jpg
-    href: http://www.discogs.com/release/7559389
+    href: https://www.discogs.com/release/7559389
 
   - title: Swans — The Glowing Man
     img: swans-tgm.jpg
-    href: http://www.discogs.com/release/8647542
+    href: https://www.discogs.com/release/8647542
 
   - title: Wrekmeister Harmonies — Light Falls
     img: wrekmeister-harmonies-lf.jpg
