--- a/records.html
+++ b/records.html
@@ -135,6 +135,10 @@ records:
     img: les-momies-de-palerme-bcc.jpg
     href: https://www.discogs.com/release/2536219
 
+  - title: mewithoutYou — I Never Said That I Was Brave
+    img: mewithoutyou-instiwb.jpg
+    href: https://www.discogs.com/release/9337715
+
   - title: mewithoutYou — [A→B] Life
     img: mewithoutyou-abl.jpg
     href: https://www.discogs.com/release/2488410
