Add Floating Into the Night

--- a/records.html
+++ b/records.html
@@ -63,6 +63,10 @@ records:
     img: constellation-sotsl.jpg
     href: https://www.discogs.com/release/361866
 
+  - title: Julee Cruise — Floating Into the Night
+    img: julee-cruise-fitn.jpg
+    href: https://www.discogs.com/release/6197789
+
   - title: Crystal Castles — Doe Deer
     img: crystal-castles-dd.jpg
     href: https://www.discogs.com/release/2249093
