--- a/records.html
+++ b/records.html
@@ -55,6 +55,10 @@ records:
     img: chariot-ll.jpg
     href: https://www.discogs.com/release/3488630
 
+  - title: The Chariot — One Wing
+    img: chariot-ow.jpg
+    href: https://www.discogs.com/release/4097145
+
   - title: clipping. — CLPPNG
     img: clipping-c.jpg
     href: https://www.discogs.com/release/5762314
