Add missing From Cells of Roughest Air

--- a/records.html
+++ b/records.html
@@ -167,6 +167,10 @@ records:
     img: mewithoutyou-ph.jpg
     href: https://www.discogs.com/release/7191198
 
+  - title: The Mile End Ladies String Auxiliary — From Cells of Roughest Air
+    img: the-mile-end-ladies-string-auxiliary-fcora.jpg
+    href: https://www.discogs.com/release/771279
+
   - title: Molasses — You'll Never Be Well No More
     img: molasses-ynbwnm.jpg
     href: https://www.discogs.com/release/1125086
