Add MPP and Reflektor

--- a/records.html
+++ b/records.html
@@ -19,6 +19,10 @@ records:
     img: animal-collective-sj.jpg
     href: https://www.discogs.com/release/1081394
 
+  - title: Animal Collective — Merriweather Post Pavilion
+    img: animal-collective-mpp.jpg
+    href: https://www.discogs.com/release/1592118
+
   - title: The Antlers — In the Attic of the Universe
     img: antlers-itaotu.jpg
     href: https://www.discogs.com/release/4163806
@@ -42,6 +46,10 @@ records:
   - title: Arcade Fire — The Suburbs
     img: arcade-fire-ts.jpg
     href: https://www.discogs.com/release/2380004
+
+  - title: Arcade Fire — Reflektor
+    img: arcade-fire-r.jpg
+    href: https://www.discogs.com/release/5041370
 
   - title: The Beatles — The Beatles
     img: beatles-tb.jpg
