Add The Infected Mass

--- a/records.html
+++ b/records.html
@@ -347,6 +347,10 @@ records:
     img: swans-tgm.jpg
     href: https://www.discogs.com/release/8647542
 
+  - title: Those Who Walk Away — The Infected Mass
+    img: those-who-walk-away-tim.jpg
+    href: https://www.discogs.com/release/9970110
+
   - title: Wrekmeister Harmonies — Light Falls
     img: wrekmeister-harmonies-lf.jpg
     href: https://www.discogs.com/release/9054147
